--- a/householder-ui/src/components/Footer/Footer.css
+++ b/householder-ui/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background: #f4f2ec;
+  background: rgb(121, 205, 233);
   text-align: center;
   padding: 1rem;
   border-top: 1px solid #ddd;
