--- a/householder-ui/src/pages/Home.css
+++ b/householder-ui/src/pages/Home.css
@@ -1,7 +1,10 @@
 .home {
+
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  max-width: 600px;
-  margin: 3rem auto;
+  width: 100%;
+  background-color: lightblue;
 }
 
 .home h2 {
@@ -16,7 +19,6 @@
 
 .home button {
   background: #9bc4b0;
-  border: none;
   padding: 0.8rem 1.5rem;
   border-radius: 6px;
   font-size: 1rem;
