--- a/householder-ui/src/pages/Home.css
+++ b/householder-ui/src/pages/Home.css
@@ -1,9 +1,9 @@
 .home {
-
   display: flex;
   flex-direction: column;
-  text-align: center;
+  align-items: center;
   width: 100%;
+  height: 100vh;
   background-color: lightblue;
 }
 
@@ -20,6 +20,7 @@
 .home button {
   background: #9bc4b0;
   padding: 0.8rem 1.5rem;
+  width: 20rem;
   border-radius: 6px;
   font-size: 1rem;
   cursor: pointer;
