--- a/householder-ui/src/components/Footer/Footer.css
+++ b/householder-ui/src/components/Footer/Footer.css
@@ -2,6 +2,6 @@
   background: rgb(121, 205, 233);
   text-align: center;
   padding: 1rem;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid white;
   font-size: 0.9rem;
 }
