--- a/householder-ui/src/components/Navbar/Navbar.css
+++ b/householder-ui/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid white;
 }
 
 .navbar .logo {
