--- a/householder-ui/src/components/Navbar/Navbar.css
+++ b/householder-ui/src/components/Navbar/Navbar.css
@@ -10,7 +10,7 @@
 /* Logo */
 .navbar .logo {
   font-size: 1.6rem;
-  color: #FAFAF7; /* soft off-white for high contrast */
+  color: #000091; 
   font-family: 'Playfair Display', serif;
 }
 
@@ -26,7 +26,7 @@
 /* Links */
 .navbar a {
   text-decoration: none;
-  color: #FAFAF7; /* off-white to match logo */
+  color: #000091; 
   font-family: 'Lato', sans-serif;
   font-size: 1rem;
   transition: color 0.2s ease-in-out, border-bottom 0.2s ease-in-out;
